@@ -2827,6 +2827,135 @@ moveSendToCall (iCode *sic, eBBlock *ebp)
 }
 
 
+/*------------------------------------------------------------------*/
+/* packPointerOp - see if we can move an offset from addition iCode */
+/*                 to the pointer iCode to used indexed addr mode   */
+/*------------------------------------------------------------------*/
+static void
+packPointerOp (iCode * ic, eBBlock ** ebpp)
+{
+  operand * pointer;
+  operand * offsetOp;
+  operand * nonOffsetOp;
+  iCode * dic;
+  iCode * uic;
+  int key;
+
+  if (POINTER_SET (ic))
+    {
+      pointer = IC_RESULT (ic);
+      offsetOp = IC_LEFT (ic);
+    }
+  else if (POINTER_GET (ic))
+    {
+      pointer = IC_LEFT (ic);
+      offsetOp = IC_RIGHT (ic);
+    }
+  else
+    return;
+
+  if (!IS_ITEMP (pointer))
+    return;
+
+  /* If the pointer is rematerializable, it's already fully optimized */
+  if (OP_SYMBOL (pointer)->remat)
+    return;
+
+  if (offsetOp && IS_OP_LITERAL (offsetOp) && operandLitValue (offsetOp) != 0)
+    return;
+  if (offsetOp && IS_SYMOP (offsetOp))
+    return;
+
+  /* There must be only one definition */
+  if (bitVectnBitsOn (OP_DEFS (pointer)) != 1)
+    return;
+  /* find the definition */
+  if (!(dic = hTabItemWithKey (iCodehTab, bitVectFirstBit (OP_DEFS (pointer)))))
+    return;
+
+  if (dic->op == '+' && (IS_OP_LITERAL (IC_RIGHT (dic)) ||
+                        (IS_ITEMP (IC_RIGHT (dic)) && OP_SYMBOL (IC_RIGHT (dic))->remat)))
+    {
+      nonOffsetOp = IC_LEFT (dic);
+      offsetOp = IC_RIGHT (dic);
+    }
+  else if (dic->op == '+' && IS_ITEMP (IC_LEFT (dic)) && OP_SYMBOL (IC_LEFT (dic))->remat)
+    {
+      nonOffsetOp = IC_RIGHT (dic);
+      offsetOp = IC_LEFT (dic);
+    }
+  else
+    return;
+
+
+  /* Now check all of the uses to make sure they are all get/set pointer */
+  /* and don't already have a non-zero offset operand */
+  for (key=0; key<OP_USES (pointer)->size; key++)
+    {
+      if (bitVectBitValue (OP_USES (pointer), key))
+        {
+          uic = hTabItemWithKey (iCodehTab, key);
+          if (POINTER_GET (uic))
+            {
+              if (IC_RIGHT (uic) && IS_OP_LITERAL (IC_RIGHT (uic)) && operandLitValue (IC_RIGHT (uic)) != 0)
+                return;
+              if (IC_RIGHT (uic) && IS_SYMOP (IC_RIGHT (uic)))
+                return;
+            }
+          else if (POINTER_SET (uic))
+            {
+              if (IC_LEFT (uic) && IS_OP_LITERAL (IC_LEFT (uic)) && operandLitValue (IC_LEFT (uic)) != 0)
+                return;
+              if (IC_LEFT (uic) && IS_SYMOP (IC_LEFT (uic)))
+                return;
+            }
+          else
+            return;
+        }
+    }
+
+  /* Everything checks out. Move the literal or rematerializable offset */
+  /* to the pointer get/set iCodes */
+  for (key=0; key<OP_USES (pointer)->size; key++)
+    {
+      if (bitVectBitValue (OP_USES (pointer), key))
+        {
+          uic = hTabItemWithKey (iCodehTab, key);
+          if (POINTER_GET (uic))
+            {
+              IC_RIGHT (uic) = offsetOp;
+              if (IS_SYMOP (offsetOp))
+                OP_USES (offsetOp) = bitVectSetBit (OP_USES (offsetOp), key);
+            }
+          else if (POINTER_SET (uic))
+            {
+              IC_LEFT (uic) = offsetOp;
+              if (IS_SYMOP (offsetOp))
+                OP_USES (offsetOp) = bitVectSetBit (OP_USES (offsetOp), key);
+            }
+          else
+            return;
+        }
+    }
+
+  /* Put the remaining operand on the right and convert to assignment     */
+  /* or cast (Sometimes the operands to the addition are different sizes, */
+  /* so there is an implicit cast. If so, need to make it explicit so     */
+  /* that all the bytes of the pointer are defined. */
+  if (IS_SYMOP (offsetOp))
+    bitVectUnSetBit (OP_USES (offsetOp), dic->key);
+  IC_RIGHT (dic) = nonOffsetOp;
+  IC_LEFT (dic) = NULL;
+  SET_ISADDR (IC_RESULT (dic), 0);
+  if (getSize (operandType (pointer)) == getSize (operandType (nonOffsetOp)))
+    dic->op = '=';
+  else
+    {
+      dic->op = CAST;
+      IC_LEFT (dic) = operandFromLink (operandType (pointer));
+    }
+}
+
 /*-----------------------------------------------------------------*/
 /* packRegisters - does some transformations to reduce register    */
 /*                   pressure                                      */
@@ -2970,6 +3099,9 @@ packRegisters (eBBlock ** ebpp, int blockno)
         {
           packForPush (ic, ebpp, blockno);
         }
+
+      if (POINTER_SET (ic) || POINTER_GET (ic))
+        packPointerOp (ic, ebpp);
 
       if (0) /* TODO: Old allocator! */
         packRegsForAccUse (ic);
