@@ -1,3 +1,8 @@
+2012-06-03 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCopt.c,
+	* src/hc08/ralloc.c: RFE 3526269 and 3526268
+
 2012-06-02 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/port.h:
